--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,7 @@
 @import 'tailwindcss';
 
+@plugin 'tailwind-scrollbar';
+
 @plugin 'tailwindcss-animate';
 
 @plugin '@tailwindcss/typography';
@@ -70,6 +72,7 @@
   color utility to any element that depends on these defaults.
 */
 @layer base {
+
     *,
     ::after,
     ::before,
@@ -78,6 +81,7 @@
         border-color: var(--color-gray-200, currentColor);
     }
 }
+
 
 :root {
     --background: oklch(1 0 0);
